Twenty Twelve: fix button active state to avoid a 2px shift, fixes #22825. Props ocean90.
git-svn-id: http://core.svn.wordpress.org/trunk@23426 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -300,7 +300,7 @@ input[type="reset"]:active {
 	background-image: -o-linear-gradient(top, #ebebeb, #e1e1e1);
 	background-image: linear-gradient(top, #ebebeb, #e1e1e1);
 	box-shadow: inset 0 0 8px 2px #c6c6c6, 0 1px 0 0 #f4f4f4;
-	border: none;
+	border-color: transparent;
 }
 li.bypostauthor cite span {
 	color: #fff;
